# subatomic

./: Cargo.toml  README.md
src/: lib.rs  subatomic32.rs  subatomic64.rs
