[package]
name = "subatomic"
version = "0.2.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT"
repository = "https://github.com/Protryon/subatomic"
description = "AtomicU64/AtomicU32 wrappers for equally sized types implemented Copy"
keywords = ["atomic", "no_std"]

[dependencies]
serde = { version = "1.0", optional = true }

[features]
u64 = []
u32 = []
default = ["u32", "u64"]
